# GE-2

./: .gitignore  CMakeLists.txt  README.md  custom_schedule_optimizer_notes.md  twitter16p_table5_relay_analysis.md
gege/: CMakeLists.txt  gege_output_log.py
gege/configs/: fb15k.yaml  fb15k_16p.yaml  fb15k_237.yaml  friendster.yaml  livejournal.yaml  livejournal_16p.yaml  twitter.yaml  twitter_16p.yaml
gege/src/cpp/include/: gege.h
gege/src/cpp/include/common/: datatypes.h  exception.h  pybind_headers.h  unique_map_cuda.h  util.h
gege/src/cpp/include/configuration/: config.h  constants.h  options.h  util.h
gege/src/cpp/include/data/: batch.h  dataloader.h  graph.h  ordering.h
gege/src/cpp/include/data/samplers/: edge.h  negative.h  neighbor.h
gege/src/cpp/include/engine/: evaluator.h  graph_encoder.h  trainer.h
gege/src/cpp/include/nn/: activation.h  initialization.h  loss.h  model.h  model_helpers.h  optim.h  regularizer.h
gege/src/cpp/include/nn/decoders/: decoder.h
gege/src/cpp/include/nn/decoders/edge/: comparators.h  complex.h  decoder_methods.h  distmult.h  distmult_selected_neg_cuda.h  edge_decoder.h  relation_operators.h  transe.h
gege/src/cpp/include/nn/decoders/node/: node_decoder.h  noop_node_decoder.h
gege/src/cpp/include/nn/encoders/: encoder.h
gege/src/cpp/include/nn/layers/: layer.h
gege/src/cpp/include/nn/layers/embedding/: embedding.h
gege/src/cpp/include/nn/layers/feature/: feature.h
gege/src/cpp/include/nn/layers/gnn/: gat_layer.h  gcn_layer.h  gnn_layer.h  graph_sage_layer.h  layer_helpers.h  rgcn_layer.h
gege/src/cpp/include/nn/layers/reduction/: concat.h  linear.h  reduction_layer.h
gege/src/cpp/include/reporting/: logger.h  reporting.h
gege/src/cpp/include/storage/: buffer.h  checkpointer.h  graph_storage.h  io.h  storage.h
gege/src/cpp/python_bindings/configuration/: config_wrap.cpp  options_wrap.cpp
gege/src/cpp/python_bindings/data/: batch_wrap.cpp  dataloader_wrap.cpp  graph_wrap.cpp
gege/src/cpp/python_bindings/data/samplers/: edge_wrap.cpp  negative_wrap.cpp  neighbor_wrap.cpp
gege/src/cpp/python_bindings/engine/: evaluator_wrap.cpp  graph_encoder_wrap.cpp  trainer_wrap.cpp  wrap.cpp
gege/src/cpp/python_bindings/manager/: gege_wrap.cpp  wrap.cpp
gege/src/cpp/python_bindings/nn/: model_wrap.cpp
gege/src/cpp/python_bindings/nn/decoders/: decoder_wrap.cpp
gege/src/cpp/python_bindings/nn/decoders/edge/: comparators_wrap.cpp  complex_wrap.cpp  distmult_wrap.cpp  edge_decoder_wrap.cpp  relation_operators_wrap.cpp  transe_wrap.cpp
gege/src/cpp/python_bindings/nn/decoders/node/: node_decoder_wrap.cpp  noop_node_decoder.cpp
gege/src/cpp/python_bindings/nn/layers/: layer_wrap.cpp
gege/src/cpp/python_bindings/nn/layers/feature/: feature_wrap.cpp
gege/src/cpp/python_bindings/nn/layers/gnn/: gat_layer_wrap.cpp  gcn_layer_wrap.cpp  gnn_layer_wrap.cpp  graph_sage_layer_wrap.cpp  layer_helpers_wrap.cpp  rgcn_layer_wrap.cpp
gege/src/cpp/python_bindings/nn/layers/reduction/: concat_wrap.cpp  linear_wrap.cpp  reduction_layer_wrap.cpp
gege/src/cpp/python_bindings/storage/: graph_storage_wrap.cpp  io_wrap.cpp  storage_wrap.cpp
gege/src/cpp/src/: gege.cpp  gege_cover_schedule_analyzer.cpp  gege_delta_log_update_analyzer.cpp  gege_hot_entity_access_analyzer.cpp  gege_partition_access_analyzer.cpp  gege_partition_handoff_analyzer.cpp  gege_unique_replay_bench.cpp
gege/src/cpp/src/common/: util.cpp
gege/src/cpp/src/configuration/: config.cpp  options.cpp  util.cpp
gege/src/cpp/src/data/: batch.cpp  dataloader.cpp  graph.cpp  ordering.cpp
gege/src/cpp/src/data/samplers/: edge.cpp  negative.cpp  neighbor.cpp
gege/src/cpp/src/engine/: evaluator.cpp  graph_encoder.cpp  trainer.cpp
gege/src/cpp/src/nn/: activation.cpp  initialization.cpp  loss.cpp  model.cpp  optim.cpp  regularizer.cpp
gege/src/cpp/src/nn/decoders/edge/: comparators.cpp  complex.cpp  decoder_methods.cpp  distmult.cpp  distmult_selected_neg_cuda.cpp  edge_decoder.cpp  relation_operators.cpp  transe.cpp
gege/src/cpp/src/nn/decoders/node/: noop_node_decoder.cpp
gege/src/cpp/src/nn/encoders/: encoder.cpp
gege/src/cpp/src/nn/layers/: layer.cpp
gege/src/cpp/src/nn/layers/embedding/: embedding.cpp
gege/src/cpp/src/nn/layers/feature/: feature.cpp
gege/src/cpp/src/nn/layers/gnn/: gat_layer.cpp  gcn_layer.cpp  graph_sage_layer.cpp  layer_helpers.cpp  rgcn_layer.cpp
gege/src/cpp/src/nn/layers/reduction/: concat.cpp  linear.cpp
gege/src/cpp/src/reporting/: reporting.cpp
gege/src/cpp/src/storage/: buffer.cpp  checkpointer.cpp  graph_storage.cpp  io.cpp  storage.cpp
gege/src/cuda/src/common/: unique_map_cuda.cu
gege/src/cuda/src/nn/decoders/edge/: distmult_selected_neg_cuda.cu
gege/src/python/: __init__.py
gege/src/python/console_scripts/: gege_eval.py  gege_train.py
gege/src/python/tools/: gege_config_generator.py  gege_preprocess.py
gege/src/python/tools/configuration/: gege_config.py  validation.py
gege/src/python/tools/preprocess/: custom.py  dataset.py
gege/src/python/tools/preprocess/converters/: torch_converter.py
gege/src/python/tools/preprocess/converters/partitioners/: torch_partitioner.py
gege/src/python/tools/preprocess/converters/readers/: pandas_readers.py
gege/src/python/tools/preprocess/converters/writers/: torch_writer.py
gege/src/python/tools/preprocess/datasets/: __init__.py  fb15k.py  fb15k_237.py  freebase86m.py  friendster.py  livejournal.py  ogb_mag240m.py  ogb_wikikg90mv2.py  ogbl_citation2.py  ogbl_ppa.py  ogbl_wikikg2.py  ogbn_arxiv.py  ogbn_papers100m.py  ogbn_products.py  twitter.py  wikidata5m.py
package/: MANIFEST.in  setup.cfg
paper/: bucket_streaming_kge_plan.md  fused_negative_operator_design.md  kge_selector_scorer_split_plan.md
scripts/: benchmark_csr_ab.py  benchmark_csr_matrix.py  benchmark_unique_backends.sh  optimize_custom_schedule.py
