[metadata]
name = gege
version = 1.0.0
description = A general and efficient graph embedding learning system
long_description = file: README.md
long_description_content_type = text/markdown

# License information
license = Apache-2.0
license_files = LICENSE

[options]
install_requires =
    numpy>=1.2
    pandas>=1.1
    torch>=1.7.1
    omegaconf>=2.2
    psutil>=5.9
    GPUtil>=1.4
    importlib_metadata>=4.0.0

zip_safe = false
python_requires = >=3.6
include_package_data = true

packages =
    gege 
    gege.tools
    gege.tools.configuration
    gege.tools.preprocess
    gege.tools.preprocess.datasets
    gege.tools.preprocess.converters
    gege.tools.preprocess.converters.partitioners
    gege.tools.preprocess.converters.readers
    gege.tools.preprocess.converters.writers
    gege.console_scripts

package_dir =
    gege = python
    gege.tools = python/tools
    gege.tools.configuration = python/tools/configuration
    gege.tools.preprocess = python/tools/preprocess
    gege.tools.preprocess.datasets = python/tools/preprocess/datasets
    gege.tools.preprocess.converters = python/tools/preprocess/converters
    gege.tools.preprocess.converters.partitioners = python/tools/preprocess/converters/partitioners
    gege.tools.preprocess.converters.readers = python/tools/preprocess/converters/readers
    gege.tools.preprocess.converters.writers = python/tools/preprocess/converters/writers
    gege.console_scripts = python/console_scripts

[options.entry_points]
console_scripts =
    gege_train = gege.console_scripts.gege_train:main
    gege_eval = gege.console_scripts.gege_eval:main
    gege_preprocess = gege.tools.gege_preprocess:main
    gege_config_generator = gege.tools.gege_config_generator:main
